# akabei

./: .bashrc  .bashrc.patch  .tmux.conf  Cargo.toml  metadata.toml  sway.sh
.config/containers/systemd/: google-cloud-cli.container
.config/fcitx5/conf/: skk.conf
.config/foot/: foot.ini  foot.ini.patch
.config/i3status-rust/: config.toml
.config/sway/: config  config.patch  dmenu  lock  session
.config/systemd/user/: fcitx5.service  swayidle.service
.local/share/fcitx5/skk/: dictionary_list
.ssh/: config
.xkb/symbols/: us_henkan
akabei/: Cargo.toml
akabei/src/: load.rs  main.rs  manifest.rs  misc.rs
base/: akabei.toml  bashrc.bash
cargo/: akabei.toml  config.toml
fcitx5/: akabei.toml  config
firefox/: akabei.toml
google-cloud-cli/: 50-google-cloud-cli.bash  akabei.toml  google-cloud-cli.container
podman/: 50-podman.bash  akabei.toml
slack/: akabei.toml  slack.desktop
src/: load.rs  main.rs  misc.rs  packages.rs  schema.rs
ssh/: akabei.toml  config
sway/: akabei.toml
