[package]
name = "akabei"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
askama = "0.14.0"
clap = { version = "4.5.24", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
nix = { version = "0.30.1", features = ["user"] }
rust-ini = "0.21.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.12.0", features = ["hex"] }
sha1 = "0.10.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
