[package]
name = "akabei"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.12.0", features = ["hex"] }
sha1 = "0.10.6"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
